@startuml Entity

skinparam classAttributeIconSize 0
hide empty fields
hide empty methods

interface Entity <<Interface>> {
    +getId() : String
    +getName() : String
    +getImagePath() : String
    +getType() : PieceType
    +getPlayerColor() : PlayerColor
    +getGameId() : int
    +getWeight() : int
    +cloneEntity() : Entity
    +asMoveable() : Optional<Moveable>
}

interface Moveable <<Interface>> {
    +getValidMoves(start : Point2D, board : ChessBoard) : List<Point2D>
    +hasMoved() : boolean
    +setHasMoved() : void
}

abstract class AbstractEntity<T extends AbstractEntityDefinition> {
    +getEntityDefinition() : T
}

class Piece {
    +getValidMoves(start : Point2D, board : ChessBoard) : List<Point2D>
    +hasMoved() : boolean
    +setHasMoved() : void
    +cloneEntity() : Piece
    +asMoveable() : Optional<Moveable>
}

class PowerUp {
    +applyEffect() : void
    +cloneEntity() : PowerUp
}

abstract class AbstractEntityDefinition {
    +getId() : String
    +getName() : String
    +getImagePath() : String
    +getPieceType() : PieceType
    +getWeight() : int
}

class PieceDefinition
class PowerUpDefinition

Entity <|.. AbstractEntity
AbstractEntity <|-- Piece
AbstractEntity <|-- PowerUp

Moveable <|.. Piece

AbstractEntityDefinition <|-- PieceDefinition
AbstractEntityDefinition <|-- PowerUpDefinition

AbstractEntity --> AbstractEntityDefinition : entityDefinition

@enduml
